# orbital-adventure

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
data/: planets.json
data/2k4k8kMarsNormal/: ReadMe.2k.4k.8k.MarsNormal.txt
data/2k4k8kMarsNormal/extras/JohnVV/: MarsNormal.ssc
data/shaders/: rockPlanetFragment.glsl  rockPlanetVertex.glsl  sunShaderFragment.glsl  sunShaderVertex.glsl
src/: Camera.cpp  Camera.hpp  CameraControlCommandProvider.cpp  CameraControlCommandProvider.hpp  CameraRotationCommand.cpp  CameraRotationCommand.hpp  CelestialCameraManager.cpp  CelestialCameraManager.hpp  CelestialObject.cpp  CelestialObject.hpp  ChangePlanetCommand.cpp  ChangePlanetCommand.hpp  Command.hpp  CommandAcceptor.cpp  CommandAcceptor.hpp  CommandProvider.cpp  CommandProvider.hpp  CurrentPlanetAtmosphere.cpp  CurrentPlanetAtmosphere.hpp  CurrentPlanetParams.cpp  CurrentPlanetParams.hpp  ExitCommand.cpp  ExitCommand.hpp  GLFWWrapper.cpp  GLFWWrapper.hpp  Game.cpp  Game.hpp  GameEventsCommandProvider.cpp  GameEventsCommandProvider.hpp  Geometry.cpp  Geometry.hpp  GeometryManager.cpp  GeometryManager.hpp  InputListener.hpp  LODInstaller.cpp  Mesh.cpp  Mesh.hpp  MeshFabric.cpp  MeshFabric.hpp  OAMeshFabric.hpp  (+42 more)
src/Celestial/: CameraControlCommandProvider.cpp  CameraControlCommandProvider.hpp  CameraRotationCommand.cpp  CameraRotationCommand.hpp  CelestialCameraManager.cpp  CelestialCameraManager.hpp  CelestialObject.hpp  ChangePlanetCommand.hpp  CurrentPlanetAtmosphere.cpp  CurrentPlanetAtmosphere.hpp  CurrentPlanetParams.cpp  CurrentPlanetParams.hpp  GeometryLODInstaller.hpp  LODInstaller.cpp  LODInstaller.hpp  Orbit.cpp  Planet.cpp  PlanetInFocusCommandProvider.hpp  SolarSystem.cpp  SolarSystem.hpp  SolarSystemCreator.cpp  SolarSystemCreator.hpp  SunDirectionUniformInstaller.cpp  SunDirectionUniformInstaller.hpp
src/Gui/: Gui.cpp  Gui.hpp  GuiRender.cpp  GuiRender.hpp  ImageButton.cpp  InputListener.cpp  InputListener.hpp  Panel.cpp  Panel.hpp  PayloadForm.cpp  PayloadForm.hpp  RocketForm.cpp  RocketForm.hpp  StageForm.cpp  StageForm.hpp  View.cpp  View.hpp  nanovg.h
src/Gui/widgets/: ImageButton.hpp  Panel.cpp  Popup.cpp  Popup.hpp
src/engine/: Camera.hpp  Curve.hpp  CustomGeometry.hpp  Filter.hpp  GLFWWrapper.hpp  Geometry.hpp  GeometryLODInstaller.hpp  GeometryManager.hpp  InputListener.hpp  IterativeTextureCreator.hpp  LODInstaller.hpp  LODTextureManager.hpp  LanguageUtils.hpp  Mesh.hpp  MeshFabric.hpp  Object.hpp  PatchGeometry.hpp  PersonalClippingMatrixInstaller.hpp  PersonalClippingMesh.hpp  PerspectiveCamera.hpp  PlanetGeometry.hpp  Renderer.hpp  Scene.hpp  ShaderManager.hpp  ShaderProgam.hpp  SkyboxGeometry.hpp  SkyboxUniformInstaller.hpp  SphereGeometry.hpp  TextureCreator.hpp  TextureCreatorFabric.hpp  TextureManager.hpp  TextureStreamer.hpp  Uniform.hpp  UniformFabric.hpp  UniformHolder.hpp  UniformInstaller.hpp  UniformInstallerFabric.hpp
src/engine/src/: Camera.cpp  CustomGeometry.cpp  Filter.cpp  GLFWWrapper.cpp  Geometry.cpp  GeometryLODInstaller.cpp  GeometryManager.cpp  IterativeTextureCreator.cpp  LODInstaller.cpp  LODTextureManager.cpp  LanguageUtils.cpp  Mesh.cpp  MeshFabric.cpp  Object.cpp  PatchGeometry.cpp  PersonalClippingMatrixInstaller.cpp  PersonalClippingMesh.cpp  PerspectiveCamera.cpp  PlanetGeometry.cpp  Renderer.cpp  Scene.cpp  ShaderManager.cpp  ShaderProgam.cpp  SkyboxGeometry.cpp  SkyboxUniformInstaller.cpp  SphereGeometry.cpp  TextureCreator.cpp  TextureCreatorFabric.cpp  TextureManager.cpp  TextureStreamer.cpp  Uniform.cpp  UniformFabric.cpp  UniformHolder.cpp
src/shaders/: earthFragment.glsl  eathVertexShader.glsl  rockPlanetFragment.glsl  rockPlanetVertex.glsl  screenGShader.glsl  screenVShader-wmatrix.glsl  screenVShader.glsl  sunShaderVertex.glsl
src/shaders/atmosphere/: atmospere-filter.glsl  copyInscatter1.glsl  copyInscatterN.glsl  copyIrradience.glsl  inscatter1.glsl  inscatterN.glsl  inscatterS.glsl  irradiance1.glsl  irradianceN.glsl  prepareTables.glsl  testFilter.glsl  transmittence.glsl
src/shaders/gui/: fragmentShader.glsl  vertexShader.glsl
src/shaders/skybox/: fragment.glsl  vertex.glsl
